@@ -15,6 +15,8 @@
 	Remove redundant backslash.
 	Use AC_CONFIG_FILES.
 
+	* acinclude.m4, configure.ac: AC_TRY_* -> AC_*_IFELSE.
+
 2023-08-19  Marc Glisse  <marc.glisse@inria.fr>
 
 	* doc/gmp.texi: Rename IEEE P754. Remove @refill.
